# cnake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Snake/: CMakeLists.txt
Snake/src/: main.cpp
SnakeLibrary/: CMakeLists.txt
SnakeLibrary/include/: CLIObserver.h  Frame.h  Fruit.h  Game.h  GameException.h  Head.h  Observer.h  ScoreManager.h  Segment.h  Snake.h  Tail.h
SnakeLibrary/src/: CLIObserver.cpp  Frame.cpp  Fruit.cpp  Game.cpp  GameException.cpp  Head.cpp  Observer.cpp  ScoreManager.cpp  Segment.cpp  Snake.cpp  Tail.cpp
test/: GameTest.cpp  ScoreManagerTest.cpp  SnakeTest.cpp
